--- a/Angular/package.json
+++ b/Angular/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^19.2.1",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
+    "mime": "^4.0.6",
     "rxjs": "~7.8.0",
     "sass": "^1.85.1",
     "tslib": "^2.3.0",
